all elements present on page, spacing needs fixing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     padding: 20px 5px;
     background-color: darkorange;
     color: whitesmoke;
-    width: 20%;
+    width: 14%;
 }
 #instructions {
     color: forestgreen;
@@ -56,4 +56,17 @@ img {
     margin: 5px;
     width: 70%;
     align-content: center;
+}
+#score-title {
+    position: relative;
+    top: 250px;
+    text-align: center;
+    background-color: seagreen;
+    width: 10%;
+    height: 5%;
+    padding: 5px;
+}
+#user-score {
+    background-color: seagreen;
+    width: 25%;
 }
